--- a/railway.toml
+++ b/railway.toml
@@ -18,7 +18,7 @@ restartPolicyMaxRetries = 10
 name = "frontend"
 root = "frontend"
 buildCommand = "npm install && npm run build"
-startCommand = "npm run preview -- --host --port $PORT" 
+startCommand = "npx serve -s dist -l 5173" 
 # Note: 'preview' is for verifying build. ideally serv with static server. 
 # Vite preview is fine for MVP. 
 healthcheckPath = "/"
