--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -14,7 +14,4 @@ RUN npm run build
 # Production stage - serve with simple static server
 FROM node:18-alpine
 WORKDIR /app
-RUN npm install -g serve
-COPY --from=builder /app/dist ./dist
-
-CMD serve -s dist -l ${PORT:-3000}
+CMD npx serve -s dist -l ${PORT}
