--- a/railway.toml
+++ b/railway.toml
@@ -5,7 +5,7 @@ builder = "NIXPACKS"
 startCommand = "echo 'Specify service in Railway UI'"
 
 [[services]]
-name = "backend"
+name = "WorkSlot"
 root = "backend"
 buildCommand = "pip install -r requirements.txt"
 startCommand = "alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port $PORT"
@@ -15,7 +15,7 @@ restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 
 [[services]]
-name = "frontend"
+name = "zealous-surprise"
 root = "frontend"
 buildCommand = "npm install && npm run build"
 startCommand = "npx -y serve -s dist -l $PORT" 
