fix(deploy): switch to explicit Dockerfile based deployment

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,10 +1,22 @@
-FROM python:3.10-slim
+# Backend Service (FastAPI + Uvicorn)
+FROM python:3.11-slim
 
 WORKDIR /app
 
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    gcc \
+    postgresql-client \
+    && rm -rf /var/lib/apt/lists/*
+
+# Copy requirements and install Python dependencies
+# Context is 'backend/' so we copy local file
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Copy application code
 COPY . .
 
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Run migrations and start server
+# dynamic PORT
+CMD sh -c "uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000}"
