--- a/railway.toml
+++ b/railway.toml
@@ -1,5 +1,5 @@
 [build]
-builder = "NIXPACKS"
+builder = "DOCKERFILE"
 
 [deploy]
 startCommand = "echo 'Specify service in Railway UI'"
@@ -7,9 +7,8 @@ startCommand = "echo 'Specify service in Railway UI'"
 [[services]]
 name = "WorkSlot"
 root = "backend"
-buildCommand = "pip install -r requirements.txt"
-startCommand = "uvicorn app.main:app --host 0.0.0.0 --port $PORT"
-healthcheckPath = "/api/public/provider/status" # Or just /
+# No build/start command needed, Dockerfile handles it
+healthcheckPath = "/api/public/provider/status" 
 healthcheckTimeout = 100
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
@@ -17,9 +16,6 @@ restartPolicyMaxRetries = 10
 [[services]]
 name = "zealous-surprise"
 root = "frontend"
-buildCommand = "npm install && npm run build"
-startCommand = "npx -y serve -s dist -l $PORT --single" 
-# Note: 'preview' is for verifying build. ideally serv with static server. 
-# Vite preview is fine for MVP. 
+# No build/start command needed, Dockerfile handles it
 healthcheckPath = "/"
 restartPolicyType = "ON_FAILURE"
